# Samosbor

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
core/managers/: resourcemanager.cpp  resourcemanager.hpp
core/managers/event/: event.cpp  event.hpp  eventmanager.cpp  eventmanager.hpp  eventmanager.tpp
core/managers/input/: inputmanager.cpp  inputmanager.hpp
core/managers/panel/: panelmanager.cpp  panelmanager.hpp
core/managers/scenemanager/: scenemanager.cpp  scenemanager.hpp
core/scene/: map_utils.hpp  scene.cpp  scene.hpp
core/scene/dead/: dead.cpp  dead.hpp
core/scene/gamescene/: gamescene.cpp  gamescene.hpp
core/scene/gamescenes/level1/: level1.cpp  level1.hpp
core/scene/gamescenes/menu/: menu.cpp  menu.hpp
core/scene/menu/: menu.cpp  menu.hpp
core/scene/win/: win.cpp  win.hpp
gamescene/: gamescene.cpp  gamescene.hpp
includes/: game.hpp  inventory.hpp  settings.hpp
includes/entity/: entity.hpp
includes/inventory/: inventory.hpp
includes/item/: item.hpp  itemregistry.hpp
includes/monster/: monster.hpp
includes/player/: player.hpp
panelscene/: panelscene.cpp  panelscene.hpp
src/: game.cpp  main.cpp  settings.cpp
src/entity/: entity.cpp
src/inventory/: inventory.cpp
src/item/: item.cpp  itemregistry.cpp
src/monster/: monster.cpp
src/player/: player.cpp
tests/: test_settings.cpp
